--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Context And Lifecycle</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sample_compose_dialog_message">Sample compose dialog message</string>
+    <string name="increment_counter_button_cd">Increment counter</string>
+    <string name="increment_counter">Increment counter</string>
 </resources>
