--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="navigate_to_compose_screen">Navigate to Compose Screen</string>
     <string name="open_dialog">Open Dialog</string>
     <string name="take_photo">Take Photo</string>
+    <string name="go_camera_fragment">Go to camera fragment</string>
 </resources>
